--- a/latex/3145160661_skripsi.tex
+++ b/latex/3145160661_skripsi.tex
@@ -228,4 +228,8 @@ Merupakan kekurangan dari pribadi penulis jika masih ditemukan banyak kesalahan 
 %Disini akhir masukan Daftar Pustaka
 %-----------------------------------------------------------------
 \include{lampiran}
+
+\include{cv}
+
+
 \end{document}
