update 3145160661_skripsi.pdf(added scan lembar pengesahan) and added 3145160661_skripsi_no_wm.pdf

--- a/latex/3145160661_skripsi.tex
+++ b/latex/3145160661_skripsi.tex
@@ -121,7 +121,7 @@
 %-----------------------------------------------------------------
 \preface
 \pagestyle{chapterheading}
-Atas berkat rahmat Allah Yang Maha Kuasa, penulis bisa menyelesaikan skripsi yang berjudul \textbf{"Deteksi Keliling Luka Kronis menggunakan \emph{Active Contour} (\emph{snake}) dan \emph{Active Contour} yang ditambahkan \emph{Preprocessing} Interpolasi"}. Selain itu penulis juga berterima kasih kepada pihak-pihak pendukung dan mendoakan semoga kebaikan dan jasa-jasa yang sudah diberikan dibalas Allah Yang Maha Kuasa. Adapun pihak-pihak tersebut sebagai berikut:
+Atas berkat rahmat Allah Yang Maha Kuasa, penulis bisa menyelesaikan skripsi yang berjudul \textbf{"Deteksi Keliling Luka Kronis menggunakan \emph{Active Contour} (\emph{snake}) dan \emph{Active Contour} yang ditambahkan Interpolasi"}. Selain itu penulis juga berterima kasih kepada pihak-pihak pendukung dan mendoakan semoga kebaikan dan jasa-jasa yang sudah diberikan dibalas Allah Yang Maha Kuasa. Adapun pihak-pihak tersebut sebagai berikut:
 
 \begin{enumerate}
 	\item Yth. Ibu Ir. Fariani Hermin Indiyah, M. T. selaku Koordinator Program Studi S-1 Ilmu Komputer Universitas Negeri Jakarta sekaligus dosen pembimbing akademik yang sudah membimbing penulis dalam hal akademik,
@@ -149,7 +149,7 @@ Merupakan kekurangan dari pribadi penulis jika masih ditemukan banyak kesalahan 
 %Disini awal masukan Intisari
 %-----------------------------------------------------------------
 \begin{abstractind}
-	\textbf{Muhamad Rizki}. 	\textbf{Deteksi Keliling Luka Kronis menggunakan \emph{Active Contour} (\emph{snake}) dan \emph{Active Contour} yang ditambahkan \emph{Preprocessing} Interpolasi}. Skripsi. Fakultas Matematika dan Ilmu Pengetahuan Alam, Universitas Negeri Jakarta. 2022. Di bawah bimbingan Med Irzal, M. Kom. dan Muhammad Eka Suryana, M. Kom
+	\textbf{Muhamad Rizki}. 	\textbf{Deteksi Keliling Luka Kronis menggunakan \emph{Active Contour} (\emph{snake}) dan \emph{Active Contour} yang ditambahkan Interpolasi}. Skripsi. Fakultas Matematika dan Ilmu Pengetahuan Alam, Universitas Negeri Jakarta. 2022. Di bawah bimbingan Med Irzal, M. Kom. dan Muhammad Eka Suryana, M. Kom
 	\vskip1cm
 	
 	Luka kronis menjadi permasalahan bagi perawat luka dan instansi kesehatan terkait. Salah satu hal mendasar dalam penyembuhan luka kronis adalah melihat ukuran luka yang akan diamati dalam proses \emph{assesment} luka yang saat ini masih dilakukan secara manual dan hal tersebut rentan dengan ketidakakuratan. Untuk mengatasi ketidakakuratan pengukuran manual, maka metode pengukuran keliling luka berbasis analisa citra (image), khususnya citra biomedis (\emph{biomedical image}) dan citra medis (\emph{medical image}) perlu dikembangkan. Skripsi ini bertujuan untuk mengimplementasi dan melihat hasil metode \emph{active contour} (\emph{snake}) dalam kasus deteksi keliling luka kronis. Implementasi yang dikembangkan menggunakan metode \emph{snake} dengan \emph{snake} yang ditambahkan interpolasi untuk deteksi keliling luka kategori luka hitam, kuning, dan merah. Hasil akhir menunjukkan bahwa data yang berhasil dideteksi menggunakan \emph{snake} interpolasi (44 data dari 71 data) lebih banyak dibandingkan versi \emph{integer} (12 data dari 71 data) dengan nilai akurasi rata-rata 77.18\% untuk \emph{snake} versi integer dan 86.1\% untuk \emph{snake} versi interpolasi
