--- a/latex/orisinalitas.tex
+++ b/latex/orisinalitas.tex
@@ -1,6 +1,6 @@
 \chapter*{\centering{\large{LEMBAR PERNYATAAN}}}
 
-Saya menyatakan dengan sesungguhnya bahwa skripsi dengan judul 	\textbf{"Deteksi Keliling Luka Kronis menggunakan \emph{Active Contour} (\emph{snake}) dan \emph{Active Contour} yang ditambahkan \emph{Preprocessing} Interpolasi"} yang disusun sebagai syarat untuk memperoleh gelar Sarjana komputer dari Program Studi Ilmu Komputer Universitas Negeri Jakarta adalah karya ilmiah saya dengan arahan dari dosen pembimbing.
+Saya menyatakan dengan sesungguhnya bahwa skripsi dengan judul 	\textbf{"Deteksi Keliling Luka Kronis menggunakan \emph{Active Contour} (\emph{snake}) dan \emph{Active Contour} yang ditambahkan Interpolasi"} yang disusun sebagai syarat untuk memperoleh gelar Sarjana komputer dari Program Studi Ilmu Komputer Universitas Negeri Jakarta adalah karya ilmiah saya dengan arahan dari dosen pembimbing.
 
 Sumber informasi yang diperoleh dari penulis lain yang
 telah dipublikasikan yang disebutkan dalam teks skripsi ini, telah dicantumkan dalam Daftar Pustaka sesuai dengan norma, kaidah dan etika penulisan ilmiah.
